tests/fail/yüksek-mertebe-çağrı2.kip
(bu a listesinin) (şey a'nın b'siyle) eşlemi,
  bu boşsa, boş;
  ilkin devama ekiyse, (ilk şey) (devamın şeyle eşlemine) ekidir.